# ccradar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release-radar.yml
data/: state.json
src/: bot.py  classifier.py  main.py  notifier.py  prompts.py  qa.py  retriever.py  searcher.py
